<resources>
    <string name="app_name" translatable="false">RoboGuide</string>

    <string name="btnSpeakHelloWorld" translatable="false">Hello World</string>
    <string name="btnSpeakLocations" translatable="false">Read locations</string>
    <string name="btnCancelSpeak" translatable="false">Cancel Speak</string>
    <string name="btnGotoHomeBase" translatable="false">Goto Home Base</string>
    <string name="btnDownloadDatabase" translatable="false">Download Database</string>
    <string name="btnExit" translatable="false">Exit App</string>
</resources>