<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnSpeakHelloWorld"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btnHeight"
        android:drawableStart="@drawable/baseline_chat_24"
        android:drawablePadding="@dimen/btnIconPadding"
        android:text="@string/btnSpeakHelloWorld"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSpeakLocations"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btnHeight"
        android:drawableStart="@drawable/baseline_not_listed_location_24"
        android:drawablePadding="@dimen/btnIconPadding"
        android:text="@string/btnSpeakLocations"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSpeakHelloWorld" />

    <Button
        android:id="@+id/btnCancelSpeak"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btnHeight"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/baseline_cancel_24"
        android:drawablePadding="@dimen/btnIconPadding"
        android:text="@string/btnCancelSpeak"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnGotoHomeBase"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btnHeight"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/baseline_home_24"
        android:drawablePadding="@dimen/btnIconPadding"
        android:text="@string/btnGotoHomeBase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnExitApp"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btnHeight"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@drawable/baseline_exit_to_app_24"
        android:drawablePadding="@dimen/btnIconPadding"
        android:text="@string/btnExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDownloadDatabase"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btnHeight"
        android:layout_marginStart="16dp"
        android:layout_marginTop="92dp"
        android:drawableStart="@drawable/baseline_cloud_download_24"
        android:drawablePadding="@dimen/btnIconPadding"
        android:text="@string/btnDownloadDatabase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>